<resources>
    <string name="app_name">Weather forecast v1.0</string>
    <string name="bad_date_format">Bad date format</string>
    <string name="current_date_example">Current date</string>
    <string name="city_name_example">City name</string>
    <string name="city_name_is_wrong">City name is wrong, choose another one</string>
    <string name="city_selection_title">City selection</string>
    <string name="city_typing_title">Type city, to provide forecast for:</string>
    <string name="city_typing_hint">First several letters is enough</string>
    <string name="city_locating_cancelled">City locating cancelled</string>
    <string name="city_selection_from_dropdown">Type city and pick one from a dropdown list below</string>
    <string name="city_mask_entries_error">City mask entries downloading error</string>
    <string name="city_typing_begin">Begin typing city name …</string>

    <string name="database_forecast_downloading">No network connection, database last location forecast has been loaded</string>
    <string name="database_city_downloading">No network connection, database last city has been loaded</string>
    <string name="database_entries_not_found">Database records, matching %s, not found</string>
    <string name="database_forecast_loaded">Downloaded from database: city = %1$s, lat = %2$d, lon = %3$d</string>
    <string name="database_city_loaded">Chosen city loaded from database = %1$s, lat = %2$d, lon = %3$d</string>
    <string name="database_forecast_for_city_not_found">Forecast for %s not found in database</string>
    <string name="default_city_absent">City was not defined earlier, cannot load from DB</string>
    <string name="degrees_values">Value of degrees for an air in Celsius of Fahrenheit</string>
    <string name="default_degrees_values">25</string>
    <string name="default_degrees_type">C</string>
    <string name="error_occurred">Some error occurred</string>

    <string name="forecast_for_city_loading">Downloading for city %1$s</string>
    <string name="forecast_for_city_success">Provided for city %1$s</string>
    <string name="forecast_for_city_error">Forecast for %1$s error</string>

    <string name="forecast_for_city_outdated">Outdated forecast for city %1$s</string>
    <string name="forecast_downloading">Forecast is downloading</string>
    <string name="forecast_downloading_for_city_text">Forecast for %s downloading…</string>

    <string name="no_selected_city_forecast">Server has ho forecast for %1$s</string>
    <string name="no_selected_city_forecast_description">Forecast for city $city is not available, please choose another city</string>


    <string name="forecast_downloading_for_city_succeeded">Downloading remote weather forecast for a city succeeded</string>
    <string name="network_available_text">Network available</string>
    <string name="network_lost_error_text">Network connection lost, check connection</string>
    <string name="network_not_available_error_text">Network is not available, check connection</string>
    <string name="network_forecast_downloading_text">Weather forecast downloading…</string>
    <string name="weather_image_content_description">Weather type</string>
    <string name="weather_type_example">weather type</string>
    <string name="connected">Internet connection available</string>
    <string name="disconnected">Internet connection not available</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="open_settings">Open settings</string>

    <string name="forecast_downloading_for_city_failed">Downloading forecast for a city failed, trying for geo location</string>

    <string name="geo_location_title">Area geo location</string>
    <string name="geo_location_message">Google Maps defined your location as $city. Do you agree ?</string>
    <string name="forecast_downloading_for_location_text">Forecast for %s\'s location downloading…</string>
    <string name="forecast_downloading_for_location_failed">Downloading forecast for a location also failed</string>
    <string name="forecast_downloading_for_location_succeeded">Downloading remote weather forecast for a location succeeded</string>
    <string name="defining_city_from_geo_location">Defining city from geo location</string>
    <string name="current_location_triangulating">Current geo location defining …</string>
    <string name="current_location_success">Current geo location success</string>
    <string name="current_location_denied">Current geo location permission denied</string>
    <string name="current_location_denied_permanently">Current geo location permission permanently denied. You may grant it by clicking permissions in following window and remove it from denied ones. You will be asked to grant permission again next time.</string>
    <string name="geo_location_by_city_define">Geo location for city %1$s defining</string>
    <string name="geo_location_by_city_success">Geo location by city succeeded</string>
    <string name="geo_location_fail_error_text">Cannot get location, check network connection</string>
    <string name="geo_location_permission_required">Local geo location permission required</string>
    <string name="geo_location_permission_offer">This app requires geo location permission to find out your location. Please agree to grant permission or quit.</string>
</resources>