<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".presentation.WeatherForecastActivity">

        <ImageView
            android:id="@+id/weather_type_image_view"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginStart="@dimen/weather_image_view_margin_left"
            android:layout_marginTop="@dimen/weather_image_view_margin_top"
            android:contentDescription="@string/weather_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/degrees_type_text_view"
            app:layout_constraintTop_toBottomOf="@+id/city_name_text_view"
            tools:srcCompat="@drawable/icon_clearsky" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="@dimen/progressbar_background_transparency"
            android:background="@color/white"
            android:indeterminateTint="@color/gray"
            android:padding="@dimen/progress_bar_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationZ="1dp"/>

        <TextView
            android:id="@+id/degrees_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/degrees_values"
            android:textColor="@color/common_border_color"
            android:textSize="@dimen/degrees_value_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/weather_type_image_view"
            app:layout_constraintEnd_toStartOf="@+id/degrees_type_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weather_type_image_view"
            tools:text="@string/default_degrees_values" />

        <TextView
            android:id="@+id/degrees_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_border_color"
            android:textSize="@dimen/degrees_type_text_size"
            app:layout_constraintEnd_toStartOf="@+id/weather_type_image_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/degrees_value_text_view"
            app:layout_constraintTop_toTopOf="@id/degrees_value_text_view"
            tools:text="@string/default_degrees_type" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/current_date_margin_top"
            android:textColor="@color/common_border_color"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout"
            tools:text="@string/current_date_example" />

        <TextView
            android:id="@+id/city_name_text_view"
            android:layout_width="@dimen/city_name_text_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/city_name_margin_top"
            android:gravity="center"
            android:textColor="@color/common_border_color"
            android:textSize="@dimen/city_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_text_view"
            tools:text="@string/city_name_example" />

        <TextView
            android:id="@+id/weather_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wether_type_margin_top"
            android:textColor="@color/common_border_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_type_image_view"
            tools:text="@string/weather_type_example" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:elevation="@dimen/app_bar_elevation"
            android:fitsSystemWindows="true"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_height"
                android:elevation="@dimen/app_bar_elevation"
                android:fitsSystemWindows="true"
                android:theme="?attr/actionBarTheme">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>